swen430as1/tests/invalid/dowhile/DoWhile_Invalid_3.while
int f(int[] items) {
  int i = 0;
  do {
      int r;
      if(i == 1) { return r; }
  } while(i < |items|);

  return r;
}

void main() {
    assert f([1]) == 1;
    assert f([1,2,3]) == 3;
    assert f([-1]) == 1;
}
